--- a/nexo/Cargo.toml
+++ b/nexo/Cargo.toml
@@ -11,4 +11,17 @@ homepage = "https://github.com/jjcp-dev/nexo"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.web-sys]
+version = "0.3.44"
+features = [
+  'CanvasRenderingContext2d',
+  'CssStyleDeclaration',
+  'Document',
+  'Element',
+  'EventTarget',
+  'HtmlCanvasElement',
+  'HtmlElement',
+  'MouseEvent',
+  'Node',
+  'Window',
+]
